crates/keron-lang/tests/corpus/errors/check/realize_int.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `realize` expects a resource or list of resources, found `Int`
  --> 1:9
  |
1 | realize 42
  |         ^^
